Fix alignment

--- a/snes/ibuffalo-map-skin.css
+++ b/snes/ibuffalo-map-skin.css
@@ -63,8 +63,8 @@ do so via my Imraising page: https://imraising.tv/u/mrmcpowned
     position: absolute;
     width: 176px;
     height: 62px;
-    top: 214px;
-    left: 358px;
+    top: 180px;
+    left: 348px;
 }
 .custom .trigger{
     width: 71.5px;
